5.4.0 -> 5.4.1:
    - devzero2000: arch macro for all EFI-compatible architectures 
    - jbj: add a --nofsync popt alias (caveat: experimental & risky).
    - devzero2000: drop borken test on change a directory with a symlink
    - proyvind: always run %clean so it won't be required in .spec file.
    - devzero2000: permit in configure phase to enable the 
      --enable-rpm-lua-extensions-based-on-rpmlib used by OpenPKG today
      and, for rpm.vercmp, by rpm.org (ref https://blueprints.launchpad.net/rpm/+spec/rpm-split-vendor-config-in-autofu)
    - jbj: checksig: check explictly for per-item failures after iterating.
    - jbj: install: check explictly for per-item failures after iterating.
    - jbj: rpmgi: save per-item failures separately from iteration returns.
    - jbj: display the exit code when -vv is used.
    - proyvind: rubygems.rb: change dependency 'ruby >= ruby_version' to
	'ruby(abi) = ruby_version'
    - devzero2000: document the actual semantic of rpm5 %exclude
    - devzero2000: flip a toy test from the %exclude and check unpackaged file issue 
    - proyvind: check whether provides are duplicate of package first (without
	distepoch), also ensures that package is always at end of %provideversion.
    - jbj: add "| cpio -dim" to the rpm2cpio.8 examples.
    - jbj: i18n: update fi.po files (Translation Project).
    - proyvind: use expanded %{___NVRA} for 'rpm --last'.
    - proyvind: set mi->mi_count in rpmmiCount() when db cursor exists rather
	than always doing it in rpmmiNext()
    - proyvind: set mi->mi_count when rpmmiNext() initializes db cursor so that
	rpmmiCount() won't break (mdvbz#62267)
    - proyvind: fix rpmmiCount() not resetting db cursor after use, breaking
	iterator (mdvbz#62279)
    - devzero2000: update INSTALL.developer with some jbj consideration 
      on how to use multiple rpm version.
    - devzero2000: permit in configure phase to enable the
      optional-dirname-and-symlink-deps used by Mandriva and Ark today